--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
         <img src="https://via.placeholder.com/300x200?text=Cerveja" alt="Cerveja" />
         <h3>Cerveja Pilsen</h3>
         <p class="price">R$ 4,99</p>
-        <a class="btn" href="https://wa.me/5544988233217SEUNUMEROAQUI?text=Olá,%20quero%20pedir%20Cerveja%20Pilsen" target="_blank">Pedir no WhatsApp</a>
+        <a class="btn" href="https://wa.me/5544988233217?text=Olá,%20vim%20pelo%20site%20Zussa%20Smart%20Express%2024h" target="_blank">Pedir no WhatsApp</a>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/300x200?text=Refrigerante" alt="Refrigerante" />
         <h3>Refrigerante Lata</h3>
         <p class="price">R$ 3,50</p>
-        <a class="btn" href="https://wa.me/55SEUNUMEROAQUI?text=Olá,%20quero%20pedir%20Refrigerante%20Lata" target="_blank">Pedir no WhatsApp</a>
+        <a class="btn" href="https://wa.me/5544988233217?text=Olá,%20vim%20pelo%20site%20Zussa%20Smart%20Express%2024h" target="_blank">Pedir no WhatsApp</a>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/300x200?text=Energetico" alt="Energético" />
         <h3>Energético</h3>
         <p class="price">R$ 9,90</p>
-        <a class="btn" href="https://wa.me/55SEUNUMEROAQUI?text=Olá,%20quero%20pedir%20Energético" target="_blank">Pedir no WhatsApp</a>
+        <a class="btn" href="https://wa.me/5544988233217?text=Olá,%20vim%20pelo%20site%20Zussa%20Smart%20Express%2024h" target="_blank">Pedir no WhatsApp</a>
       </div>
     </div>
   </div>
