--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="card" data-name="Heineken" data-category="cerveja">
       <span class="tag">Cerveja</span>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Heineken_Logo.svg" />
+      <img src="imagens/heineken.png" alt="Heineken Long Neck">
       <h3>Heineken Long Neck</h3>
       <p class="price">R$ 7,99</p>
       <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Heineken%20Long%20Neck.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
@@ -74,7 +74,7 @@
 
     <div class="card" data-name="Red Label" data-category="whisky">
       <span class="tag">Whisky</span>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/Johnnie_Walker_Label.png" />
+      <img src="imagens/heineken.png" alt="RedLabel">
       <h3>Johnnie Walker Red Label</h3>
       <p class="price">R$ 89,90</p>
       <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Whisky%20Red%20Label.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
@@ -82,18 +82,10 @@
 
     <div class="card" data-name="Smirnoff" data-category="vodka">
       <span class="tag">Vodka</span>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Smirnoff_logo.svg" />
+      <img src="imagens/heineken.png" alt="Smirnoff">
       <h3>Vodka Smirnoff</h3>
       <p class="price">R$ 39,90</p>
       <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Vodka%20Smirnoff.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
-    </div>
-
-    <div class="card" data-name="Combo Churrasco" data-category="combo">
-      <span class="tag">Combo</span>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Beer_bottles.jpg" />
-      <h3>Combo Churrasco</h3>
-      <p class="price">R$ 119,90</p>
-      <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Combo%20Churrasco.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
     </div>
 
   </div>
