--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="card" data-name="Heineken" data-category="cerveja">
       <span class="tag">Cerveja</span>
-      <img src="imagens/heineken.png" alt="Heineken Long Neck">
+      <img src="imagens/heineken.png" alt="heinekenlong">
       <h3>Heineken Long Neck</h3>
       <p class="price">R$ 7,99</p>
       <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Heineken%20Long%20Neck.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
@@ -74,7 +74,7 @@
 
     <div class="card" data-name="Red Label" data-category="whisky">
       <span class="tag">Whisky</span>
-      <img src="imagens/heineken.png" alt="RedLabel">
+      <img src="imagens/heineken.png" alt="redlabel">
       <h3>Johnnie Walker Red Label</h3>
       <p class="price">R$ 89,90</p>
       <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Whisky%20Red%20Label.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
@@ -82,7 +82,7 @@
 
     <div class="card" data-name="Smirnoff" data-category="vodka">
       <span class="tag">Vodka</span>
-      <img src="imagens/heineken.png" alt="Smirnoff">
+      <img src="imagens/heineken.png" alt="smirnoff">
       <h3>Vodka Smirnoff</h3>
       <p class="price">R$ 39,90</p>
       <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Vodka%20Smirnoff.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
