--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
       <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Vodka%20Smirnoff.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
     </div>
 
+    <div class="card" data-name="Coca" data-category="Refrigerante">
+      <span class="tag">Refrigerante</span>
+      <img src="imagens/heineken.png" alt="smirnoff">
+      <h3>Coca Cola 2 Litros</h3>
+      <p class="price">R$ 13,90</p>
+      <a class="btn" href="https://wa.me/5544988233217?text=Olá!%20Quero%20pedir%20Vodka%20Smirnoff.%20Pagamento%20via%20Pix." target="_blank">Pedir no WhatsApp</a>
+    </div>
+
   </div>
 
   <p style="margin-top:30px; font-weight:600;">💳 Aceitamos Pix • Entrega rápida • Atendimento profissional</p>
